// GenreManager.h
#ifndef GENREMANAGER_H
#define GENREMANAGER_H

#include <QStringList>

class GenreManager {
public:
    static QStringList getGenreList();
};

#endif // GENREMANAGER_H





